testsuite/tests/grammar/invalid_lexers/token_action_1.lkt
from common import Example

lexer foo_lexer {
    @text Example <- "example"
}
